Not closing navbar on small screens fixed. Added prices and contact us sections

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -235,3 +235,8 @@ a[href^="mailto:"], a[href^="tel:"] {
     content: "\A";
     white-space: pre;
 }
+
+#contact-link {
+    color: black;
+    font-weight: bold;
+}
